<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_gray">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_verde" />

    <!-- Texto "Criar Conta" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textFontWeight="1000"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/e_mail"
        app:hintTextColor="@color/white"
        style="@style/LoginTextInputLayoutStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        app:hintTextColor="@color/white"
        style="@style/LoginTextInputLayoutStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botão de Criar Conta -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_entrar"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:fontFamily="@font/poppins"
        app:cornerRadius="15dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_forgot_password"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:textColor="@color/colorPrimary"
        android:text="@string/txt_forgot_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_account"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_new_user"
            android:text="@string/btn_user_register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>