<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_verde" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingTop="20dp"
            android:text="@string/bem_vindo_ao"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Colete_mais"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_criar_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_criar_conta"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:fontFamily="@font/poppins"
            app:cornerRadius="15dp"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrar_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_entrar"
            android:textSize="17dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins"
            app:cornerRadius="15dp"
             />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
